--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    width: max-content;
     color: var(--secondary-color);
     font-weight: 500;
 }
